syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "constant/chat_type.proto";

message UpdateTypingStatusRequest {
    ChatType chat_type = 1;
    int64 to_id = 2;
}