syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message QueryUserProfileRequest {
    int64 userId = 1;
    google.protobuf.Int64Value last_updated_date = 2;
}