syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "constant/user_status.proto";

message UpdateUserOnlineStatusRequest {
    UserStatus user_status = 1;
}